--- a/dashboard/Pipfile
+++ b/dashboard/Pipfile
@@ -4,11 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-nltk = "3.7"
-tensorflow = "2.9.1"
-mlflow = "1.25.1"
-scikit-learn = "*"
-zenml = {version = "==0.13.1", extras = ["stacks"]}
+streamlit = "*"
 
 [dev-packages]
 
